# forge

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile.llama  FORGE-ARCHITECTURE.md  README.md  TASKS.md  pyproject.toml
forge/: cli.py  cli_markdown.py  cli_render.py  config.py
forge/analyze/: persistence.py  prompts.py  relations.py  structured.py
forge/calibrate/: drift.py  resolver.py  scorer.py
forge/db/: models.py  schema.py  store.py
forge/evolve/: agent_evolution.py  selection.py
forge/export/: api.py  digest.py  obsidian.py
forge/extract/: claims.py  relevance.py
forge/ingest/: rss.py  url.py
forge/llm/: client.py
forge/pipeline/: auto_simulate.py  runner.py  scheduler.py
forge/retrieve/: context.py  embeddings.py  search.py
forge/swarm/: arena.py  consensus.py  debate_digest.py  interaction.py  orchestrate.py  (+3 more)
scripts/: setup_llama.sh  validate_model.py
tests/: conftest.py  test_agent_evolution.py  test_api.py  test_arena.py  test_auto_simulate.py  test_calibrate.py  test_cli.py  test_cli_markdown.py  test_cli_render.py  test_cli_turns.py  test_consensus.py  test_context.py  test_debate_digest.py  test_digest.py  test_embeddings.py  test_evolve.py  test_extract.py  test_feedback_cli.py  test_history.py  test_ingest.py  test_interaction.py  test_llm_client.py  test_obsidian.py  test_orchestrate.py  test_persistence.py  test_pipeline.py  test_population.py  test_predictions.py  test_prompts.py  test_relations.py  test_search.py  test_status.py  test_store.py  test_structured.py  test_swarm_prompts.py  test_track_record.py
(+10 files in other folders)
